# boring-lang

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile-python  LICENSE  README.md  boring-test.bl  docker-compose.yml  notes.txt  setup.py
boring/: interpret.py  main.py  parse.py  type_alias_resolution.py  type_checker.py  type_checking.py  typedefs.py  typing.py
examples/: generics.bl  main.bl  strings.bl
examples/math/: main.bl
src/: ast.rs  builtins.rs  compiler.rs  errors.rs  grammar.lalrpop  interpreter.rs  main.rs  trait_checking.rs  type_alias_resolution.rs  type_checker.rs  type_checking.rs  types.rs
src/hir/: errors.rs  types.rs
