[package]
name = "boring-lang"
version = "0.0.1"
authors = ["asegavac"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.lalrpop] # <-- We added this and everything after!
version = "0.19.6"
features = ["lexer"]

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
clap = "2.33.0"
thiserror = "1"
